[package]
name = "orderly"
version = "0.2.0"
edition = "2021"
description = "Transport-agnostic merged order book aggregator for crypto exchanges."
license = "MIT"

[lib]
name = "orderly"
path = "src/lib.rs"

[dependencies]
chrono              = { version = "0.4", features = ["serde"] }
futures             = "0.3"
log                 = "0.4"
rust_decimal        = "1"
rust_decimal_macros = "1"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
tokio               = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite   = { version = "0.24", features = ["native-tls"] }
tokio-util          = { version = "0.7", features = ["rt"] }
tungstenite         = "0.24"
url                 = "2"

[dev-dependencies]
env_logger = "0.11"
